fixed contrast error?

--- a/index.css
+++ b/index.css
@@ -40,6 +40,8 @@ nav a {
     display: flex;
     color: #BCBAB8;
     margin-left: 10px;
+    background-color: rgb(0,0,0, 0.0);
+    
 }
 
 img {
